@@ -1,0 +1,10 @@
+package dtool.ast.definitions;
+
+/**
+ * Interface for elements that can have template parameters.
+ */
+public interface ITemplatableElement {
+	
+	boolean isTemplated();
+	
+}
